# rarchive

./: .gitmodules  Cargo.toml  README.md  shell.nix
examples/: list_contents.rs
rarchive-sys/: Cargo.toml  bindings.rs  build.rs
rarchive-sys/src/: lib.rs
src/: archive_read.rs  archive_write.rs  entry.rs  error.rs  lib.rs  main.rs  read.rs
