[package]
name = "rarchive-sys"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
bindgen = "0.55"
pkg-config = "0.3"

[features]
# Enable this to statically link libarchive.
# This will also build libarchive from source
static = []
